tests/machine/x/c/json_builtin.error
exit status 1
/workspace/mochi/tests/machine/x/c/json_builtin.c:101:34: error: unknown type name ‘map_string_int’
  101 | static void _json_map_string_int(map_string_int m) {
      |                                  ^~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/json_builtin.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/json_builtin.c:132:3: error: unknown type name ‘map_string_int’
  132 |   map_string_int m = (tmp_item_t){.a = 1, .b = 2};
      |   ^~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/json_builtin.c:132:22: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  132 |   map_string_int m = (tmp_item_t){.a = 1, .b = 2};
      |                      ^
/workspace/mochi/tests/machine/x/c/json_builtin.c:133:3: warning: implicit declaration of function ‘_json_map_string_int’ [-Wimplicit-function-declaration]
  133 |   _json_map_string_int(m);
      |   ^~~~~~~~~~~~~~~~~~~~
